`Added styles for #container element in index.html`

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.png" type="image/png" />
     <title>Animate</title>
+
+    <style>
+      #container {
+        display: flex;
+        justify-content: center;
+        border: 1px #000 solid;
+        width: fit-content;
+        height: fit-content;
+      }
+    </style>
   </head>
   <body onload="a()">
     <div id="container"></div>
