--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       }
     </style>
   </head>
-  <body onload="a()">
+  <body>
     <div id="container"></div>
     <script src="./simulater.js"></script>
   </body>
