--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 10px;
+        /* padding: 10px; */
         background-color: #fff;
         border: 2px solid #ccc;
         border-radius: 12px;
