--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: linear-gradient(to right, #e0f7fa, #ffffff);
+        /* background: linear-gradient(to right, #e0f7fa, #ffffff); */
         font-family: Arial, sans-serif;
       }
 
@@ -27,10 +27,10 @@
         justify-content: center;
         align-items: center;
         /* padding: 10px; */
-        background-color: #fff;
-        border: 2px solid #ccc;
+        /* background-color: #fff; */
+        /* border: 2px solid #ccc; */
         border-radius: 12px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+        /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); */
         width: fit-content;
         height: fit-content;
       }
